--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "matplotlib>=3.10.0",
+    "pandas>=2.2.3",
     "pynvim>=0.5.2",
     "tensorflow==2.17",
     "tensorflow-metal>=1.1.0",
